@@ -69,6 +69,7 @@ class ConfigManager(object):
             'roundup.url': 'http://bugs.tryton.org/roundup/',
             'roundup.xmlrpc': 'roundup-xmlrpc.tryton.org',
             'menu.pane': 200,
+            'menu.expanded': True,
         }
         self.config = {}
         self.options = {
