@@ -1,3 +1,4 @@
+* Add toggle button for menu
 * Replace shortcuts by menu favorites
 * Move Plugins into toolbar Actions
 * Add url to list view
